# RAG-Assistant-publication

./: .dockerignore  .env.example  .env_example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  Dockerfile  LICENSE  README.md  pyproject.toml
config/: settings.example.yaml
docs/: API.md  GPU.md  README.md
ops/docker/: Dockerfile
requirements/: base.txt  dev.txt
src/: app.py  config.py  exception.py  logger.py  validation.py  vectordb.py
tests/: test_basic.py
